@@ -1078,6 +1078,12 @@ $skin: Skin object
 &$text: bottomScripts Text
 Append to $text to add additional text/scripts after the stock bottom scripts.
 
+'SkinAfterContent': Allows extensions to add text after the page content and
+article metadata.
+&$data: (string) Text to be printed out directly (without parsing)
+This hook should work in all skins. Just set the &$data variable to the text
+you're going to add.
+
 'SkinBuildSidebar': At the end of Skin::buildSidebar()
 $skin: Skin object
 &$bar: Sidebar contents
